--- a/iam-examples/spring-webflux-secured/Dockerfile
+++ b/iam-examples/spring-webflux-secured/Dockerfile
@@ -1,5 +1,5 @@
 FROM adoptopenjdk/openjdk11:alpine-jre
-COPY build/libs/spring-webflux-secured-2.4.0-SNAPSHOT.jar /spring-webflux-secured-2.4.0-SNAPSHOT.jar
+COPY build/libs/spring-webflux-secured-2.4.0-RELEASE.jar /spring-webflux-secured-2.4.0-RELEASE.jar
 COPY start-service.sh /start-service.sh
 RUN chmod +x /start-service.sh
 RUN apk --no-cache add curl
