--- a/iam-examples/spring-webflux-secured/build.gradle
+++ b/iam-examples/spring-webflux-secured/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'one.microproject.iamservice'
-version = '2.4.0-SNAPSHOT'
+version = '2.4.0-RELEASE'
 sourceCompatibility = '11'
 
 repositories {
