--- a/iam-examples/integration-tests/build.gradle
+++ b/iam-examples/integration-tests/build.gradle
@@ -16,8 +16,8 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
     implementation 'org.bouncycastle:bcpg-jdk15on:1.68'
     implementation 'org.bouncycastle:bcpkix-jdk15on:1.68'
+    implementation 'org.slf4j:slf4j-api:1.7.30'
 
-    testImplementation('org.slf4j:slf4j-simple:1.7.30')
     testImplementation('org.junit.jupiter:junit-jupiter:5.7.0')
     testImplementation('org.junit.jupiter:junit-jupiter-api:5.7.0')
     testImplementation('org.junit.jupiter:junit-jupiter-engine:5.7.0')
