--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id "org.sonarqube" version "3.0"
+    id "jacoco"
 }
 
 sonarqube {
@@ -10,6 +11,24 @@ sonarqube {
     }
 }
 
+subprojects {
+    apply plugin: 'java'
+    apply plugin: 'jacoco'
+    task allDeps(type: DependencyReportTask) {}
+    test {
+        useJUnitPlatform()
+        afterSuite { desc, result ->
+            if (!desc.parent) {
+                println "\nTest result: ${result.resultType}"
+                println "Test summary: ${result.testCount} tests, " +
+                        "${result.successfulTestCount} succeeded, " +
+                        "${result.failedTestCount} failed, " +
+                        "${result.skippedTestCount} skipped"
+            }
+        }
+    }
+}
+/*
 subprojects {
     apply plugin: 'java'
     apply plugin: 'jacoco'
@@ -40,6 +59,7 @@ subprojects {
 
     task allDeps(type: DependencyReportTask) {}
 }
+*/
 
 project(':iam-model') {
 }
